fix route documentation in swagger
